--- a/config.toml
+++ b/config.toml
@@ -33,7 +33,7 @@ taxonomies = [{ name = "tags", rss = true, paginate_by = 5 }]
 # Configuration of the Markdown rendering
 [markdown]
 # When set to "true", all code blocks are highlighted.
-highlight_code = true
+highlight_code = false
 
 # A list of directories used to search for additional `.sublime-syntax` and `.tmTheme` files.
 extra_syntaxes_and_themes = []
